--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  speech_to_text: ^7.3.0
+  permission_handler: ^11.3.1
+
   table_calendar: ^3.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
