Complete Google Calendar integration with sync logic, duplicate avoidance, and security hardening

--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,6 @@ migrate_working_dir/
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
@@ -39,9 +34,20 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
+# Android Studio build artifacts
 /android/app/debug
 /android/app/profile
 /android/app/release
 
+# SENSITIVE FILES - DO NOT COMMIT
 .env
+*.env
+google-services.json
+client_secret_*.json
+*.keystore
+!debug.keystore
+
+# Local analysis artifacts
+analysis_output.txt
+final_analysis.txt
+fix_analysis.txt
