--- a/ai_timetable_tool/ios/Runner/Info.plist
+++ b/ai_timetable_tool/ios/Runner/Info.plist
@@ -53,5 +53,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.361896201650-gt2hq55o8qd82u088jdl1s2fvfpd81t8</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
