--- a/ai_timetable_tool/pubspec.yaml
+++ b/ai_timetable_tool/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
+  flutter_dotenv: ^5.1.0
+  geolocator: ^12.0.0
+  flutter_local_notifications: ^17.2.2
+  timezone: ^0.9.4
+
   google_sign_in: ^6.2.1
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
@@ -64,7 +69,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+      - .env
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
